--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,20 +1,20 @@
-<html>
-    <head>
-        <title>My super blog</title>
-    </head>
+{% extends 'blog/base.html' %}
 
-    <body>
-        <div>
-            <h1><a href="/">На главную</a></h1>
+{% block content %}
+    {% for post in posts %}
+    <div class="post">
+        <div class="date">
+            {% if post.published_date %}
+                <p>Опубликовано: {{ post.published_date }}</p>
+            {% else %}
+                <p>Не опубликовано</p>
+            {% endif %}
+            <p>Автор: {{ post.author }}</p>
         </div>
-        {% for post in posts %}
-        <div>
-            <p>Дата публикации: {{ post.published_date }}</p>
-            <h1><a href="">{{ post.title }}</a></h1>
-            <p>
-                {{ post.text|linebreaksbr }}
-            </p>
-        </div>
-        {% endfor %}
-    </body>
+        <h2><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h2>
+        <p>{{ post.text|linebreaksbr }}</p>
+        <p>Комментариев: {{ post.comments.count }}</p>
+    </div>
+    {% endfor %}
+{% endblock %}
 </html>
